[gd_scene load_steps=15 format=3 uid="uid://bloajy60y5627"]

[ext_resource type="Script" uid="uid://csl1aiv7xn6xu" path="res://Scripts/3d/player.gd" id="1_tl14i"]
[ext_resource type="Script" uid="uid://dwtmcqrm8vanl" path="res://Scripts/3d/UI/ObjectViewer3D.gd" id="3_7kar2"]
[ext_resource type="Script" uid="uid://b2a2kjpogk2lw" path="res://Scripts/3d/Interacciones/InteractionItem3D.gd" id="3_lmcgd"]
[ext_resource type="Script" uid="uid://de06y12qvmxc" path="res://Scripts/3d/UI/InteractPromp.gd" id="4_mdtle"]
[ext_resource type="Texture2D" uid="uid://c1tp7pqe622b5" path="res://icon.svg" id="4_prcyg"]
[ext_resource type="Texture2D" uid="uid://dtpqnnyhb55ym" path="res://Assets/Texturas/SpritesPersonas/spritemujer.png" id="5_1yqe0"]
[ext_resource type="Script" uid="uid://dgbhqxiewf08o" path="res://Scripts/3d/cabeza/JumpScareOverlay.gd" id="8_1yqe0"]
[ext_resource type="Script" uid="uid://c12a066r2sulw" path="res://Scripts/3d/UI/InventoryProgress.gd" id="8_prcyg"]
[ext_resource type="PackedScene" uid="uid://kbj57vwspffw" path="res://Escenas/3d/Subescenas/head_enemy.tscn" id="9_02lv8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_lvx33"]

[sub_resource type="BoxMesh" id="BoxMesh_7kar2"]
size = Vector3(10, 0, 10)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_mdtle"]
data = PackedVector3Array(-5, 0, 5, 5, 0, 5, -5, 0, 5, 5, 0, 5, 5, 0, 5, -5, 0, 5, 5, 0, -5, -5, 0, -5, 5, 0, -5, -5, 0, -5, -5, 0, -5, 5, 0, -5, 5, 0, 5, 5, 0, -5, 5, 0, 5, 5, 0, -5, 5, 0, -5, 5, 0, 5, -5, 0, -5, -5, 0, 5, -5, 0, -5, -5, 0, 5, -5, 0, 5, -5, 0, -5, 5, 0, 5, -5, 0, 5, 5, 0, -5, -5, 0, 5, -5, 0, -5, 5, 0, -5, -5, 0, 5, 5, 0, 5, -5, 0, -5, 5, 0, 5, 5, 0, -5, -5, 0, -5)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_lvx33"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mdtle"]
size = Vector3(1, 1.611206, 1)

[node name="3Dcasa" type="Node3D"]

[node name="Player" type="CharacterBody3D" parent="." groups=["player"]]
script = ExtResource("1_tl14i")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("BoxShape3D_lvx33")

[node name="Camera3D" type="Camera3D" parent="Player"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.07580781, -1.0743662, 0)
mesh = SubResource("BoxMesh_7kar2")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_mdtle")

[node name="llave" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1436638, -0.8360027, 2.7039387)
mesh = SubResource("CapsuleMesh_lvx33")
skeleton = NodePath("")
script = ExtResource("3_lmcgd")
item_name = "LLAVE"
item_type = "bolsa"
description_lines = Array[String](["MIRA BRO", "WAAA", "UNA LLAVE"])
pickup_item = true
item_texture = ExtResource("4_prcyg")
inspect_texture = ExtResource("5_1yqe0")

[node name="Area3D" type="Area3D" parent="llave"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="llave/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.30560303, 0)
shape = SubResource("BoxShape3D_mdtle")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ObjectViewer3D" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_7kar2")

[node name="DimBackground" type="ColorRect" parent="UI/ObjectViewer3D"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.21176471)

[node name="ObjectSprite" type="TextureRect" parent="UI/ObjectViewer3D"]
clip_contents = true
custom_minimum_size = Vector2(500, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
expand_mode = 5

[node name="ObjectText" type="Label" parent="UI/ObjectViewer3D"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="InteractPrompt" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_mdtle")

[node name="Label" type="Label" parent="UI/InteractPrompt"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "E-INTERACTUAR"

[node name="InventoryProgress" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -226.0
offset_bottom = 250.0
grow_horizontal = 0
script = ExtResource("8_prcyg")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/InventoryProgress"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelBranches" type="Label" parent="UI/InventoryProgress/VBoxContainer"]
layout_mode = 2

[node name="LabelPlants" type="Label" parent="UI/InventoryProgress/VBoxContainer"]
layout_mode = 2

[node name="LabelBag" type="Label" parent="UI/InventoryProgress/VBoxContainer"]
layout_mode = 2

[node name="JumpScareOverlay" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("8_1yqe0")

[node name="TextureRect" type="TextureRect" parent="UI/JumpScareOverlay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="UI/JumpScareOverlay"]

[node name="HeadManager" parent="." instance=ExtResource("9_02lv8")]
speed = null
active_time = null
proximity_radius = null

[node name="HeadSpawner" type="Node3D" parent="."]

[node name="Marker3D" type="Marker3D" parent="HeadSpawner"]
